<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBG"
    tools:context="com.rxjy.niujingji.activity.UpdClientActivity">

    <include layout="@layout/include_header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24px">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_upd_client_client_name_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/client_name"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_upd_client_client_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_upd_client_client_name_text"
                android:background="@null"
                android:hint="@string/please_input_name_importance"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_upd_client_client_name_lin"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_upd_client_phone_num_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone_number"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_upd_client_phone_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_upd_client_phone_num_text"
                android:background="@null"
                android:hint="@string/please_input_phone_num_importance"
                android:inputType="number"
                android:maxLines="11"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_upd_client_phone_num_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_upd_client_company_name_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/company_name"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_upd_client_company_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_upd_client_company_name_text"
                android:background="@null"
                android:hint="@string/please_input_company_name"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_upd_client_company_name_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_upd_client_acreage_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/acreage"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_upd_client_acreage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_upd_client_acreage_text"
                android:background="@null"
                android:hint="@string/please_input_acreage"
                android:inputType="numberDecimal"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_upd_client_acreage_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_upd_client_location_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/measure_location"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_upd_client_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_upd_client_location_text"
                android:background="@null"
                android:hint="@string/please_input_measure_location"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_upd_client_location_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_upd_client_type_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/client_type"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_upd_client_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_upd_client_type_text"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="请选择"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_upd_client_wx_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/wx_number"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_upd_client_wx"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_upd_client_wx_text"
                android:background="@null"
                android:hint="@string/please_input_wx_number"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_upd_client_wx_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tv_upd_client_tc_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tc_type"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <RadioGroup
                android:id="@+id/rg_upd_client_tc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_upd_client_tc_text"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_tc_one"
                    android:layout_width="120px"
                    android:layout_height="40px"
                    android:background="@drawable/selector_radio_button_spec"
                    android:button="@null"
                    android:gravity="center"
                    android:text="套餐一"
                    android:textColor="@color/shape_radio_button_spec"
                    android:textSize="@dimen/text_size_l" />

                <RadioButton
                    android:id="@+id/rb_tc_two"
                    android:layout_width="120px"
                    android:layout_height="40px"
                    android:layout_marginLeft="20px"
                    android:background="@drawable/selector_radio_button_spec"
                    android:button="@null"
                    android:gravity="center"
                    android:text="套餐二"
                    android:textColor="@color/shape_radio_button_spec"
                    android:textSize="@dimen/text_size_m" />

                <RadioButton
                    android:id="@+id/rb_tc_three"
                    android:layout_width="120px"
                    android:layout_height="40px"
                    android:layout_marginLeft="20px"
                    android:background="@drawable/selector_radio_button_spec"
                    android:button="@null"
                    android:gravity="center"
                    android:text="套餐三"
                    android:textColor="@color/shape_radio_button_spec"
                    android:textSize="@dimen/text_size_m" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_upd_client_tc_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_upd_client"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_gravity="bottom"
            android:background="@drawable/selector_btn_sub"
            android:text="@string/save_measure"
            android:textColor="@color/colorWhite"
            android:textSize="34px" />

    </LinearLayout>

</LinearLayout>
