<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog"
        android:orientation="vertical"
        android:paddingBottom="18px"
        android:paddingLeft="18px"
        android:paddingTop="18px">

        <LinearLayout
            android:id="@+id/lin_wx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20px">

            <ImageView
                android:layout_width="98px"
                android:layout_height="98px"
                android:src="@mipmap/wx_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36px"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/focus_on_weChat_public"
                    android:textColor="@color/colorBlackLight"
                    android:textSize="@dimen/text_size_m" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20px"
                    android:gravity="center"
                    android:text="@string/add_focus_on_weChat_public"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="@dimen/text_size_s" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLine"/>

        <LinearLayout
            android:id="@+id/lin_qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="24px">

            <ImageView
                android:layout_width="98px"
                android:layout_height="98px"
                android:src="@mipmap/qq_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36px"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/qq_service"
                    android:textColor="@color/colorBlackLight"
                    android:textSize="@dimen/text_size_m" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20px"
                    android:gravity="center"
                    android:text="@string/add_qq_service"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="@dimen/text_size_s" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLine"/>

        <LinearLayout
            android:id="@+id/lin_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="24px">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="98px"
                android:layout_height="98px"
                android:src="@mipmap/service_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36px"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/hot_line"
                    android:textColor="@color/colorBlackLight"
                    android:textSize="@dimen/text_size_m" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20px"
                    android:gravity="center"
                    android:text="@string/call_hot_line"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="@dimen/text_size_s" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>