<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@color/colorBG"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="预约信息"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/text_size_l" />

        <ImageView
            android:id="@+id/iv_pop_close"
            android:layout_width="24px"
            android:layout_height="match_parent"
            android:layout_marginRight="24px"
            android:src="@mipmap/close_icon" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="208px"
        android:background="@color/colorBG"
        android:orientation="vertical"
        android:padding="24px">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_pop_name"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_pop_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_pop_name"
                android:background="@null"
                android:hint="@string/please_input_name"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_pop_name_lin"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80px">

            <TextView
                android:id="@+id/tv_pop_phone"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_pop_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_pop_phone"
                android:background="@null"
                android:hint="@string/please_input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_pop_phone_lin"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLine" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@color/colorPrimary"
        android:text="提交预约"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_l" />

</LinearLayout>